# fileupload-react-fastapi

./: .editorconfig  .gitignore  README.md  Taskfile.yml  bun.lockb  package.json  pyproject.toml
backend/src/: main.py
backend/tests/: test_main.py
frontend/: bun.lockb  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DropArea.tsx  MyPDFsArea.tsx  TitleArea.tsx
