[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "piyota0901", email = "piyo.tatsu.0901@gmail.com" }
]
dependencies = [
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pytest>=8.3.2",
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
